gcc/testsuite/rust/rustc/ui/issues/issue-55587.rs
use std::path::Path;

fn main() {
    let Path::new(); // { dg-error ".E0164." "" { target *-*-* } }
}

